--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "jsencrypt": "3.3.1",
     "nprogress": "0.2.0",
     "pinia": "2.0.22",
+    "table-excel": "^2.0.5",
     "vue": "3.2.45",
     "vue-cropper": "1.0.3",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "4.1.4"
   },
   "devDependencies": {
